changed archives color

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -209,8 +209,8 @@ blockquote {
     background-color: #424242;
 }
 
-/* Updates */
-.updates {
+/* Resources */
+.resources {
     background-color: #C8E6C9;
 }
 
