--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -1,12 +1,12 @@
 // Archives
 section#archives
-.updates
     .row.remove-margin-bottom
         .col.s12
             .container.padding-bottom
                 h2 Archives
-                script(async='', src='https://static.medium.com/embed.js')
-                a.m-story(data-collapsed='false', data-width="100%", data-height="250px", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a') Amader Golpo: Meet Shahana Hanif, Bangladeshi visionary
+                .center
+                    script(async='', src='https://static.medium.com/embed.js')
+                    a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
                 p.flow-text This is a collaborative project that is seeking innovative Bangladeshi folks across the diaspora who are seeking to work in Bangladeshi community to design a political theater and digital archive collective. We're looking for Bangladeshi artists, creators, writers, visionaries and changemakers. <strong>Are you a graphic designer? Singer? Documentarian? Painter? Actress? We'd love to collaborate with you!</strong>
                 .row.remove-margin-bottom
                     .col.s12.m6
