--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -6,7 +6,11 @@ section#archives
                 h2 Archives
                 .center
                     script(async='', src='https://static.medium.com/embed.js')
-                    a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
+                    .row.remove-margin-bottom
+                        .col.s12.m6
+                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
+                        .col.s12.m6
+                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
                 p.flow-text This is a collaborative project that is seeking innovative Bangladeshi folks across the diaspora who are seeking to work in Bangladeshi community to design a political theater and digital archive collective. We're looking for Bangladeshi artists, creators, writers, visionaries and changemakers. <strong>Are you a graphic designer? Singer? Documentarian? Painter? Actress? We'd love to collaborate with you!</strong>
                 .row.remove-margin-bottom
                     .col.s12.m6
@@ -19,10 +23,3 @@ section#archives
                         a.waves-effect.waves-light.btn-large(href='#contact')
                             i.material-icons.right send
                             | Contact
-
-
-
-
-
-
-
