--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -7,6 +7,9 @@ section#archives
                 .center
                     script(async='', src='https://static.medium.com/embed.js')
                     .row.remove-margin-bottom
+                        .col.s12
+                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sharmin-sadequee-9-11-entrapment-islamophobia-d0de7fa9b3f2')
+                    .row.remove-margin-bottom
                         .col.s12.m6
                             a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
                         .col.s12.m6
