--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -6,7 +6,7 @@ section#archives
                 h2 Archives
                 .center
                     script(async='', src='https://static.medium.com/embed.js')
-                    .row.remove-margin-bottom
+                    .row
                         .col.s12
                             a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sharmin-sadequee-9-11-entrapment-islamophobia-d0de7fa9b3f2')
                     .row.remove-margin-bottom
