--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -9,12 +9,16 @@ section#archives
                     .row
                         .col.s12
                             a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sharmin-sadequee-9-11-entrapment-islamophobia-d0de7fa9b3f2')
-                    .row
-                        .remove-margin-bottom.hide-on-med-and-up
-                            .col.s12.m6
-                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
-                            .col.s12.m6
-                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
+                    .row.hide-on-med-and-up
+                        .col.s12
+                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
+                        .col.s12
+                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
+                    .row.remove-margin-bottom.hide-on-small-only
+                        .col.s12.m6
+                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
+                        .col.s12.m6
+                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
                 p.flow-text This is a collaborative project that is seeking innovative Bangladeshi folks across the diaspora who are seeking to work in Bangladeshi community to design a political theater and digital archive collective. We're looking for Bangladeshi artists, creators, writers, visionaries and changemakers. <strong>Are you a graphic designer? Singer? Documentarian? Painter? Actress? We'd love to collaborate with you!</strong>
                 .row.remove-margin-bottom
                     .col.s12.m6
