--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -12,6 +12,7 @@ section#archives
                     .row.hide-on-med-and-up
                         .col.s12
                             a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
+                    .row.hide-on-med-and-up
                         .col.s12
                             a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
                     .row.remove-margin-bottom.hide-on-small-only
