--- a/views/includes/sections/more.jade
+++ b/views/includes/sections/more.jade
@@ -5,7 +5,7 @@ section#more
         .col.s12.m6.padding-top.padding-bottom
             h4 Our work
             p.flow-text This summer, we are organizing a public theater project with brilliantly talented Bangladeshi and South Asian diasporic organizers! We are building up towards an innovative process where we invite South Asian artists, creatives and social change makers to the table to contribute to this interdisciplinary project!
-            a.waves-effect.waves-light.btn-large(href='#upcoming')
+            a.waves-effect.waves-light.btn-large.modal-trigger(href='#featuredEvent')
                 i.material-icons.right date_range
                 | Upcoming
         .col.s12.m6.padding-top.padding-bottom
