--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -6,28 +6,46 @@ section#archives
                 h2 Archives
                 .center
                     script(async='', src='https://static.medium.com/embed.js')
-                    .row
-                        .col.s12
-                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sharmin-sadequee-9-11-entrapment-islamophobia-d0de7fa9b3f2')
-                    .row.hide-on-med-and-up
-                        .col.s12
-                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
-                    .row.hide-on-med-and-up
-                        .col.s12
-                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
-                    .row.remove-margin-bottom.hide-on-small-only
-                        .col.s12.m6
-                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
-                        .col.s12.m6
-                            a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
+                    .hide-on-small-on
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sapna-nyc-promoting-health-social-and-economic-empowerment-be13cec51436')
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-annie-ferdous-bridging-culture-and-community-3b39e1f734bc')
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sharmin-sadequee-9-11-entrapment-islamophobia-d0de7fa9b3f2')
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-chaumtoli-huq-speaks-truth-to-power-d3a64d1c8685')
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
+
+                    .hide-on-med-and-up
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sapna-nyc-promoting-health-social-and-economic-empowerment-be13cec51436')
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-annie-ferdous-bridging-culture-and-community-3b39e1f734bc')
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sharmin-sadequee-9-11-entrapment-islamophobia-d0de7fa9b3f2')
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-chaumtoli-huq-speaks-truth-to-power-d3a64d1c8685')
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a')
+                        .row
+                            .col.s12.m6
+                                a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-liberation-fighter-jensine-sultana-f5bbf908fa98')
+
                 p.flow-text This is a collaborative project that is seeking innovative Bangladeshi folks across the diaspora who are seeking to work in Bangladeshi community to design a political theater and digital archive collective. We're looking for Bangladeshi artists, creators, writers, visionaries and changemakers. <strong>Are you a graphic designer? Singer? Documentarian? Painter? Actress? We'd love to collaborate with you!</strong>
                 .row.remove-margin-bottom
-                    .col.s12.m6
-                        .hide-on-med-and-up.padding-top-light
-                        a.waves-effect.waves-light.btn-large(href='http://bit.ly/1TmeR1T', target='_blank')
-                            i.material-icons.right border_color
-                            | Apply
-                    .col.s12.m6
+                    .col.s12
                         .hide-on-med-and-up.padding-top-light
                         a.waves-effect.waves-light.btn-large(href='#contact')
                             i.material-icons.right send
