--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@ html(lang='en')
             include includes/sections/mission
             include includes/sections/more
             include includes/sections/facts
+            include includes/sections/upcoming
             include includes/sections/updates
             include includes/sections/resources
             include includes/sections/author
