--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -6,7 +6,7 @@ section#archives
                 h2 Archives
                 .center
                     script(async='', src='https://static.medium.com/embed.js')
-                    .hide-on-small-on
+                    .hide-on-small-only
                         .row
                             .col.s12.m6
                                 a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-sapna-nyc-promoting-health-social-and-economic-empowerment-be13cec51436')
