--- a/views/includes/sections/more.jade
+++ b/views/includes/sections/more.jade
@@ -2,7 +2,7 @@
 section#more
 .row.remove-margin-bottom.padding-bottom
     .container
-        .col.s12.padding-top.padding-bottom
+        .padding-top.padding-bottom
             h4 Our stories
             p.flow-text With Bangladeshi residents of New York, the Bangladeshi Historical Memory Project works with oral histories to document the cultures of resilience in the Bangladeshi diaspora. In order to address the historical amnesia around our ancestral lineage, migration and partition stories, this archive serves as a place for historical memory.
             a.waves-effect.waves-light.btn-large(href='#resources')
