--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,2 +1,6 @@
 $bodyFont: 'Lora', serif;
 $headerFont: 'Open Sans', sans-serif;
+$standardTextColor: #212529;
+$pinkHighLight: #FF1654;
+$yellowHighLight: #D6CF06;
+$opaqueBlack: 3px 3px 3px rgba(0,0,0, 0.2);
